Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/EOI.out
EOI.java:11:1: compiler.err.premature.eof
1 error
